[gd_scene load_steps=2 format=3 uid="uid://dhfw32r5ech16"]

[ext_resource type="Script" uid="uid://o5k8lbgidtbr" path="res://scenes/node_2d.gd" id="1_auhge"]

[node name="Spawn" type="Node2D"]
script = ExtResource("1_auhge")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.479
autostart = true

[node name="door1" type="Marker2D" parent="."]
position = Vector2(50, 521)

[node name="door2" type="Marker2D" parent="."]
position = Vector2(49, 805)

[node name="door3" type="Marker2D" parent="."]
position = Vector2(48, 1097)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
